# osNSU

./: .gitignore  authData.txt  oslinkey  oslinkey.pub  proxy_rules.txt  Что я люблю_24.txt
block1/task1/: ms.bash  t12e.c  t13.c  t13a.c
block1/task2/: Makefile
block1/task3/: ms.bash  t31.c
block2/task1/: Makefile  queue-threads.c  queue.c
block2/task3/: CMakeLists.txt  head.h  (+1 more)
lab1/: calc  lec.txt  main.c  slhw.c  static-lib-hw.c
lab2/: asm.c  hello  hello.c  lec.txt  sys.c  syscall.asm  syscall.txt  write.c
lab3/: fa.c  fileAction.c  fs.txt  ms.bash  pagemapPrint2.c  printPage.c  reverse.c
lab4/: adressSpace.txt
lab5/: proc.txt
lab6/: pipeInAdressSpace.txt
proxy/: CMakeLists.txt  Dockerfile  Makefile  docker-compose.yml  main.c
proxy/headers/: cache.h  cacheList.h  clientConnection.h  clientConnectionList.h  garbageCollector.h  httpService.h  logging.h  pthreadService.h  queueService.h  serverConnection.h  serverConnectionList.h  serverSocketService.h  threadPool.h
proxy/sources/: cache.c  cacheList.c  clientConnection.c  clientConnectionList.c  garbageCollector.c  httpService.c  pthreadService.c  queueService.c  serverConnection.c  serverConnectionList.c  serverSocketService.c  threadPool.c
proxy/src/: main.c
proxyV3/: CMakeLists.txt  main.c
proxyV3/headers/: argsChecker.h  cache.h  cacheList.h  clientConnection.h  clientConnectionList.h  pthreadService.h  queueService.h  serverConnectionList.h  serverSockerService.h
proxyV3/sources/: argsChecker.c  cache.c  clientConnection.c  clientConnectionList.c  logger.c  serverSockerService.c  threadPool.c
proxyv1/: server.c
proxyv2/: AtomicInt.h  CMakeLists.txt  Cache.cpp  Cache.h  CacheEntity.cpp  CacheEntity.h  Client.cpp  Client.h  ConcurrentMap.h  Logger.cpp  Logger.h  Proxy.cpp  Proxy.h  Server.cpp  Server.h  compile.sh  debCompile.sh  http_parser.c  http_parser.h  main.cpp
test/: client.c  server.c
(+150 files in other folders)
